# ffirs-bot

./: Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: event_handler.rs  main.rs
ffirs-commands/: Cargo.toml
ffirs-commands/src/: cmd_builder.rs  cmd_creator.rs  cmd_manager.rs  cmd_tree.rs  cmd_tree_builder.rs  cmd_tree_builder_ext.rs  cmd_walker.rs  command_tree.rs  error.rs  fragment.rs  fragment_iter.rs  lib.rs  mappers.rs  matchers.rs  type_map.rs
ffirs-core/: Cargo.toml
ffirs-core/src/: event_handler.rs  lib.rs  main.rs
