[package]
name = "ffirs-commands"
version = "0.1.0"
authors = ["Lucas Malandrino <lucas.malandrino@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0.19"
regex = "1.3.9"

[dependencies.serenity]
git = "https://github.com/Lakelezz/serenity/"
branch = "await"
version = "0.8.6"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "rustls_backend",
]
