[package]
name = "ffirs-core"
version = "0.1.0"
authors = ["Lucas Malandrino <lucas.malandrino@gmail.com>"]
edition = "2018"

[features]
default = []
shared = []

[dependencies]
ffirs-commands = { path = "../ffirs-commands" }
anyhow = "1.0.31"
log = "0.4.8"
simplelog = "0.8.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[dependencies.serenity]
git = "https://github.com/Lakelezz/serenity/"
branch = "await"
version = "0.8.6"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "rustls_backend",
]

[dependencies.tokio]
version = "0.2.21"
features = [
    "macros",
    "rt-core",
    "rt-threaded",
    "signal",
]
